name:              heal
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Peter Berry
maintainer:        Peter Berry
synopsis:          An API testing app
description:       Testbed for an EVE API library to be released sometime in the future.
stability:         Experimental
cabal-version:     >= 1.14
build-type:        Simple
homepage:          https://github.com/HairyDude/heal

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language: Haskell2010

    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Call

    other-modules: ModelUtils
                   Orphans
                   Utils
                   EveApi.Errors
                   EveApi.Methods
                   EveApi.Orphans
                   EveApi.Types
                   EveApi.Values

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        NoMonomorphismRestriction

    other-extensions: TupleSections
                      DeriveGeneric
                      StandaloneDeriving
                      FlexibleInstances
                      ConstraintKinds

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.1.4      && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , clientsession                 >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-sqlite             >= 1.0        && < 1.1
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.8        && < 1.9
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , data-default                  >= 0.5        && < 0.6
                 , aeson                         >= 0.6        && < 0.7
                 , attoparsec                    >= 0.10.2     && < 0.11
                 , containers                    >= 0.4.2      && < 0.5
                 , resourcet                     >= 0.4.4      && < 0.5
                 , transformers                  >= 0.3        && < 0.4
                 , http-types                    >= 0.7.3      && < 0.8
                 , utf8-string                   >= 0.3.7      && < 0.4

executable         heal
    default-language: Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , heal
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    default-language: Haskell2010

    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , heal
                 , yesod-test >= 0.3 && < 0.4
                 , yesod-default
                 , persistent
                 , persistent-sqlite
